[project]
name = "comfyui-nodes-visualization"
description = "2400+节点可视化 Visualization | Collection of ComfyUI Custom Nodes"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ZHO-ZHO-ZHO/ComfyUI-Nodes-Visualization"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Nodes-Visualization"
Icon = ""
